@@ -11,18 +11,36 @@ public class Main {
 
         System.out.println("blockchain inicial: " + chain);
 
-        Block genesisBlock = chain.getBlockchain().get(0); // Get the genesis block
+        Block genesisBlock = chain.getBlockchain().getFirst(); // Get the genesis block
         String genesis_hash = genesisBlock.getBlockHash();
 
+        // 1st Block with transactions
         Block block1 = getBlockData(genesis_hash);
-
-        System.out.println("Block1: " + block1);
-        System.out.println("Block1 Transactions: " + block1.getTransactions().toString());
+        System.out.println("Block1 before mining: " + block1);
+        block1.mineBlock();
+        System.out.println("Block1 after mining: " + block1);
+        System.out.println("Block1 Transactions: " + block1.getTransactions());
         System.out.println(block1.verifyBlock());
 
         chain.addBlock(block1);
 
         System.out.println("blockchain final: " + chain);
+
+        System.out.println("blockchain valid: " + chain.isValid());
+        System.out.println("-----Alteração do Bloco 1-------");
+        System.out.println("Block1 Transactions" + chain.getBlockchain().get(1).getTransactions());
+
+        //Criar lista de transacoes alterada
+        Transaction transaction1_alt = new Transaction(Transaction.TransactionType.BID, "Joao deu bid $50");
+        Transaction transaction2_alt = new Transaction(Transaction.TransactionType.BID, "Julio deu bid $60");
+        List<Transaction> transactions_alt = new ArrayList<>();
+        transactions_alt.add(transaction1_alt);
+        transactions_alt.add(transaction2_alt);
+
+        // Modificar transacoes do bloco1
+        chain.getBlockchain().get(1).setTransactions(transactions_alt);
+        System.out.println("Block1 Transactions depois de alteracao" + chain.getBlockchain().get(1).getTransactions());
+        System.out.println("blockchain valid: " + chain.isValid());
 
     }
 
